force-app/main/default/objects/erudition__c/erudition__c.object-meta.xml
<CustomObject>
    <description>R3 Knowledge Base</description>
    <label>Erudition</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eruditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>