force-app/main/default/objects/erudition__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <inlineHelpText>Description of the challenge.</inlineHelpText>
    <label>Challenge</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>