force-app/main/default/objects/erudition__c/fields/Code_Block_2__c.field-meta.xml
<CustomField>
    <fullName>Code_Block_2__c</fullName>
    <label>Code Block 2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>