force-app/main/default/objects/erudition__c/fields/Code_Block_3__c.field-meta.xml
<CustomField>
    <fullName>Code_Block_3__c</fullName>
    <label>Code Block 3</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>