force-app/main/default/objects/erudition__c/fields/Code_Block_Title_2__c.field-meta.xml
<CustomField>
    <fullName>Code_Block_Title_2__c</fullName>
    <label>Code Block Title 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>