force-app/main/default/objects/erudition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of how to resolve the challenge described.</inlineHelpText>
    <label>Solution Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>